--- a/googlekeyspider.ipynb
+++ b/googlekeyspider.ipynb
@@ -1431,7 +1431,9 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1512,7 +1514,9 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "StdinNotImplementedError",
