--- a/googlekeyspider.ipynb
+++ b/googlekeyspider.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
     "driver.set_window_size(800, 600)\n",
     "\n",
     "github_username = 'yelangzhiwu'\n",
-    "github_password = 'x421558739c'\n",
+    "github_password = 'ylzw123456'\n",
     "\n",
     "headers = {\n",
     "        'User-Agent': 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; WOW64; Trident/5.0)',\n",
@@ -1455,7 +1455,7 @@
    "outputs": [],
    "source": [
     "valid_google_key_path = \\\n",
-    "    rf'E:\\workspace_all\\workspace_py\\hs_code_spider\\valid_google_key_list_{file_index}.json'\n",
+    "    rf'E:\\googlekey\\valid_google_key_list_{file_index}.json'\n",
     "with open(valid_google_key_path, 'w', encoding='utf8') as fp:\n",
     "    fp.write(json.dumps(valid_google_key_list))"
    ]
@@ -1491,7 +1491,7 @@
     "# 合并有效json\n",
     "import os\n",
     "\n",
-    "dir_path = r'E:\\workspace_all\\workspace_py\\hs_code_spider'\n",
+    "dir_path = r'E:\\googlekey'\n",
     "\n",
     "all_valid_key_list = list()\n",
     "\n",
